fixed extra space on the right

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,17 @@
 }
 
 * {
-  scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "TradeGothicW02-BoldCn20";
+  scroll-behavior: smooth;
   background-color: #f17555;
+}
+
+html,
+body {
+  overflow-x: hidden;
 }
 
 .container {
@@ -187,6 +192,7 @@ section {
 }
 
 .lower h1 {
+  position: absolute;
   height: 100vh;
   width: 100vw;
   padding-left: 30%;
